Section 6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "www.opstrail.com"
    http:
      paths:
      - pathType: Prefix
        path: "/first"
        backend:
          service:
            name: hello-kubernetes-first
            port:
              number: 80
      - pathType: Prefix
        path: "/second"
        backend:
          service:
            name: hello-kubernetes-second
            port:
              number: 80
